# embedding-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
